2010/12/11 - Initial build for mcollective 1.0.0