@@ -7,7 +7,7 @@
 ruby /opt/rightscale/bin/fetchec2metadata.rb
 ruby /opt/rightscale/bin/fetchec2userdata.rb
 
-# If we're a mcollective node then start up automatically
-grep -q server /var/spool/ec2/user-data.raw || /usr/local/bin/start-mcollective-demo.rb
+# If we're a mcollective node or were given a psk via cloudformation then start up automatically
+grep -q mcollective_psk /var/spool/ec2/user-data.raw || /usr/local/bin/start-mcollective-demo.rb
 
 touch /var/lock/subsys/local
