@@ -1,16 +1,13 @@
-                       _ _           _   _           
-                      | | |         | | (_)          
-   _ __ ___   ___ ___ | | | ___  ___| |_ ___   _____ 
+                       _ _           _   _
+                      | | |         | | (_)
+   _ __ ___   ___ ___ | | | ___  ___| |_ ___   _____
   | '_ ` _ \ / __/ _ \| | |/ _ \/ __| __| \ \ / / _ \
   | | | | | | (_| (_) | | |  __/ (__| |_| |\ V /  __/
   |_| |_| |_|\___\___/|_|_|\___|\___|\__|_| \_/ \___|
 
 Welcome to the demonstration of The Marionette Collective
-          http://mcollective.googlecode.com
+           http://marionette-collective.org/
           irc: irc.freenode.org #mcollective
-
-This is the main controlling server of your mcollective demo
-please run start-mcollective-demo.rb to bootstrap it
 
 for more information see:
 
