@@ -1,1 +1,2 @@
 2010/12/11 - Initial build for mcollective 1.0.0
+2011/02/26 - Upgrade to 1.0.1 and make CloudFormation compatable
